tests/baselines/reference/typeGuardInClass.errors.txt
tests/cases/conformance/expressions/typeGuards/typeGuardInClass.ts(6,17): error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
  Type '数字' is not assignable to type '文字'.
tests/cases/conformance/expressions/typeGuards/typeGuardInClass.ts(13,17): error TS2322: Type '文字 | 数字' is not assignable to type '数字'.
  Type '文字' is not assignable to type '数字'.


==== tests/cases/conformance/expressions/typeGuards/typeGuardInClass.ts (2 errors) ====
    let x: string | number;
    
    if (typeof x === "string") {
        let n = class {
            constructor() {
                let y: string = x;
                    ~
!!! error TS2322: Type '文字 | 数字' is not assignable to type '文字'.
!!! error TS2322:   Type '数字' is not assignable to type '文字'.
            }
        }
    }
    else {
        let m = class {
            constructor() {
                let y: number = x;
                    ~
!!! error TS2322: Type '文字 | 数字' is not assignable to type '数字'.
!!! error TS2322:   Type '文字' is not assignable to type '数字'.
            }
        }
    }
    